Update Darkness Kernel Profiles
Signed-off-by: MOVZX <movzx@yahoo.com>

--- a/rootdir/etc/init.darkness.rc
+++ b/rootdir/etc/init.darkness.rc
@@ -7,13 +7,13 @@
 #
 # Features:
 # - Made with love...
-# - Qualcomm CAF GNU/Linux Kernel 3.18.90
+# - Qualcomm CAF GNU/Linux Kernel 3.18.91
 # - Compiled using Linaro GCC Toolchains 6.4.1
 # - Linaro Heterogeneous Multi-Processing (HMP)
 # - Custom Kernel Profiles
 # - Darkness CPU Governor
 # - Ultra KSM (UKSM)
-# - OP3T OPChain & FP Boost
+# - OP3T FP Boost
 # - Adreno GPU Boost
 # - EXT4, F2FS, SDCardFS, exFAT & NTFS
 # - FIOPS, MAPLE, BFQ & CFQ I/O Scheduler
@@ -31,11 +31,10 @@
 # - etc.
 #
 # Defaults:
-# - CPU Governor               : Interactive
+# - CPU Governor               : Darkness
 # - I/O Scheduler              : FIOPS
-# - I/O Readahead              : 256KB
+# - I/O Readahead              : 512KB
 # - Block/SCSI Multi Queue     : Enabled
-# - OnePlus 3/3T OPChain       : Enabled with Boost
 # - OnePlus 3/3T FP Boost      : Enabled
 # - FSync Operation            : Enabled
 # - Arch Power/Capacity        : Enabled
@@ -67,7 +66,7 @@ on darkness
             # Interactive
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "80 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay 13000
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/above_hispeed_delay 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1324800
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_lowspeed_load 10
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 80
@@ -75,17 +74,17 @@ on darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_rate_screenoff 30000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/timer_slack 50000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 0
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/io_is_busy 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 1
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 1
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/align_windows 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fastlane 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/powersave_bias 1
             # Darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/target_loads "80 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/above_hispeed_delay 13000
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/above_hispeed_delay 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/hispeed_freq 1324800
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/go_lowspeed_load 10
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/go_hispeed_load 80
@@ -93,22 +92,22 @@ on darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/timer_rate_screenoff 30000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/timer_slack 50000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/max_freq_hysteresis 0
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/io_is_busy 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/use_migration_notif 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/use_sched_load 1
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/align_windows 1
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/align_windows 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/fastlane 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/powersave_bias 1
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
         # Big
             write /sys/devices/system/cpu/cpu2/online 1
             write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 307200
             # Interactive
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/target_loads "85 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
-                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/above_hispeed_delay "13000 1324800:21000 1632000:13000 1996800:34000"
+                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/above_hispeed_delay "20000 1324800:20000 1632000:20000 1996800:30000"
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/hispeed_freq 1996800
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/go_lowspeed_load 15
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/go_hispeed_load 85
@@ -116,7 +115,7 @@ on darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/timer_rate_screenoff 30000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/timer_slack 50000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/max_freq_hysteresis 30000
-                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/io_is_busy 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/use_migration_notif 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/use_sched_load 1
@@ -126,7 +125,7 @@ on darkness
             # Darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/target_loads "85 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
-                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/above_hispeed_delay "13000 1324800:21000 1632000:13000 1996800:34000"
+                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/above_hispeed_delay "20000 1324800:20000 1632000:20000 1996800:30000"
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/hispeed_freq 1996800
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/go_lowspeed_load 15
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/go_hispeed_load 85
@@ -134,7 +133,7 @@ on darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/timer_rate_screenoff 30000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/timer_slack 50000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/max_freq_hysteresis 30000
-                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/io_is_busy 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/use_migration_notif 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/use_sched_load 1
@@ -142,7 +141,7 @@ on darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/fastlane 0
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/powersave_bias 1
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
     #
     # CPU Scheduler
         chmod 755 /proc/sys/kernel/sched_boost
@@ -159,18 +158,10 @@ on darkness
         write /sys/kernel/cpu_input_boost/ib_duration_ms 30
         write /sys/kernel/cpu_input_boost/enabled 1
     #
-    # OnePlus 3/3T OPChain
-        write /sys/module/opchain/parameters/chain_on 1
-        write /sys/module/opchain/parameters/boost 1
-        write /sys/module/opchain/parameters/boost_tl 1
-        write /sys/module/opchain/parameters/boost_sample_time 21000
-    #
     # Set Adreno GPU
         write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 5
         write /sys/class/kgsl/kgsl-3d0/max_pwrlevel 0
         write /sys/class/kgsl/kgsl-3d0/devfreq/adrenoboost 0
-        # write /sys/module/adreno_idler/parameters/adreno_idler_active 0
-        # write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 10
         write /sys/class/kgsl/kgsl-3d0/devfreq/min_clock_mhz 133
         write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133000000
         write /sys/class/kgsl/kgsl-3d0/devfreq/max_clock_mhz 624
@@ -222,19 +213,19 @@ on darkness
         setprop sys.io.scheduler fiops
         # MMCBLK0
         write /sys/block/sda/queue/scheduler fiops
-        write /sys/block/sda/queue/read_ahead_kb 256
+        write /sys/block/sda/queue/read_ahead_kb 512
         write /sys/block/sda/queue/iostats 0
         # MMCBLK1
         write /sys/block/sde/queue/scheduler fiops
-        write /sys/block/sde/queue/read_ahead_kb 256
+        write /sys/block/sde/queue/read_ahead_kb 512
         write /sys/block/sde/queue/iostats 0
         # DM-0
         write /sys/block/dm-0/queue/scheduler fiops
-        write /sys/block/dm-0/queue/read_ahead_kb 256
+        write /sys/block/dm-0/queue/read_ahead_kb 512
         write /sys/block/dm-0/queue/iostats 0
         # DM-1
         write /sys/block/dm-1/queue/scheduler fiops
-        write /sys/block/dm-1/queue/read_ahead_kb 256
+        write /sys/block/dm-1/queue/read_ahead_kb 512
         write /sys/block/dm-1/queue/iostats 0
     #
     # Misc Tweaks
