--- a/rootdir/etc/init.spectrum.rc
+++ b/rootdir/etc/init.spectrum.rc
@@ -33,18 +33,18 @@ on property:persist.spectrum.profile=0
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "80 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 80
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fastlane 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/powersave_bias 1
             # Darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/target_loads "80 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/go_hispeed_load 80
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/fastlane 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/powersave_bias 1
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
         # Big
             write /sys/devices/system/cpu/cpu2/online 1
             write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 307200
@@ -52,18 +52,18 @@ on property:persist.spectrum.profile=0
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/target_loads "85 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/go_hispeed_load 85
-                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/fastlane 0
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/powersave_bias 1
             # Darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/target_loads "85 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/go_hispeed_load 85
-                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 21000
+                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 20000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/fastlane 0
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/powersave_bias 1
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
     #
     # CPU Scheduler
         chmod 755 /proc/sys/kernel/sched_boost
@@ -72,12 +72,6 @@ on property:persist.spectrum.profile=0
     # CPU Input Boost
         chmod 755 /sys/module/msm_performance/parameters/touchboost
         write /sys/module/msm_performance/parameters/touchboost 0
-    #
-    # OnePlus 3/3T OPChain
-        write /sys/module/opchain/parameters/chain_on 1
-        write /sys/module/opchain/parameters/boost 1
-        write /sys/module/opchain/parameters/boost_tl 1
-        write /sys/module/opchain/parameters/boost_sample_time 21000
     #
     # Set Adreno GPU
         write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 5
@@ -108,18 +102,18 @@ on property:persist.spectrum.profile=1
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "10 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 75
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 34000
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 30000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fastlane 0
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/powersave_bias 1
             # Darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/target_loads "10 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/go_hispeed_load 75
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 34000
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 30000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/fastlane 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/powersave_bias 0
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
         # Big
             write /sys/devices/system/cpu/cpu2/online 1
             write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 307200
@@ -127,18 +121,18 @@ on property:persist.spectrum.profile=1
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/target_loads "10 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/go_hispeed_load 80
-                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 34000
+                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 30000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/fastlane 0
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/powersave_bias 1
             # Darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/target_loads "10 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/go_hispeed_load 80
-                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 34000
+                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 30000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/fastlane 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/powersave_bias 0
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
     #
     # CPU Scheduler
         chmod 755 /proc/sys/kernel/sched_boost
@@ -147,12 +141,6 @@ on property:persist.spectrum.profile=1
     # CPU Input Boost
         chmod 755 /sys/module/msm_performance/parameters/touchboost
         write /sys/module/msm_performance/parameters/touchboost 1
-    #
-    # OnePlus 3/3T OPChain
-        write /sys/module/opchain/parameters/chain_on 1
-        write /sys/module/opchain/parameters/boost 1
-        write /sys/module/opchain/parameters/boost_tl 1
-        write /sys/module/opchain/parameters/boost_sample_time 34000
     #
     # Set Adreno GPU
         write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 5
@@ -222,18 +210,18 @@ on property:persist.spectrum.profile=3
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "1 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/go_hispeed_load 70
-                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 55000
+                write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 50000
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/fastlane 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/interactive/powersave_bias 0
             # Darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/target_loads "1 307200:20 422400:25 480000:30 556800:35 652800:40 729600:45 844800:50 960000:55 1036800:60 1113600:65 1190400:70 1228800:75 1324800:80 1401600:85 1478400:90 1593600:95"
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/go_hispeed_load 70
-                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 55000
+                write /sys/devices/system/cpu/cpu0/cpufreq/darkness/min_sample_time 50000
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/fastlane 1
                 write /sys/devices/system/cpu/cpu0/cpufreq/darkness/powersave_bias 0
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor darkness
         # Big
             write /sys/devices/system/cpu/cpu2/online 1
             write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 307200
@@ -241,18 +229,18 @@ on property:persist.spectrum.profile=3
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/target_loads "1 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/go_hispeed_load 75
-                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 55000
+                write /sys/devices/system/cpu/cpu2/cpufreq/interactive/min_sample_time 50000
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/fastlane 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/interactive/powersave_bias 0
             # Darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/target_loads "1 307200:20 480000:25 652800:30 883200:35 940800:40 1190400:45 1248000:50 1324800:55 1478400:60 1555200:65 1632000:70 1785600:75 1824000:80 1996800:85 2073600:90 2150400:95"
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/go_hispeed_load 75
-                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 55000
+                write /sys/devices/system/cpu/cpu2/cpufreq/darkness/min_sample_time 50000
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/fastlane 1
                 write /sys/devices/system/cpu/cpu2/cpufreq/darkness/powersave_bias 0
             # Set Default CPU Governor
-                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
+                write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor darkness
     #
     # CPU Scheduler
         chmod 755 /proc/sys/kernel/sched_boost
@@ -261,12 +249,6 @@ on property:persist.spectrum.profile=3
     # CPU Input Boost
         chmod 755 /sys/module/msm_performance/parameters/touchboost
         write /sys/module/msm_performance/parameters/touchboost 1
-    #
-    # OnePlus 3/3T OPChain
-        write /sys/module/opchain/parameters/chain_on 1
-        write /sys/module/opchain/parameters/boost 1
-        write /sys/module/opchain/parameters/boost_tl 1
-        write /sys/module/opchain/parameters/boost_sample_time 55000
     #
     # Set Adreno GPU
         write /sys/class/kgsl/kgsl-3d0/default_pwrlevel 5
